Fixed pages reload & jump to traslates pages.

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -4878,14 +4878,14 @@ min-height: 300px;
     background-size: 100%;
     z-index:100;
     background-image: url(img/chrome-2.jpg);
-    background-size: cover;
+    background-size: 100%;
     background-repeat: no-repeat;
 }
 
 .background-photo8{
     position:relative;
     z-index:100;
-    background-size: cover;
+    background-size: 100%;
     background-image: url(img/kit-meet.png);
     background-size: 100%;
     background-repeat: no-repeat;
@@ -4896,7 +4896,6 @@ min-height: 300px;
     background-size: 100%;
     z-index:100;
     background-image: url(img/chrome-3.jpg);
-    background-size: cover;
     background-repeat: no-repeat;
 }
 
